trunk/Archive2/5f/820aa2bce32acb/output
main.cpp:11:15: error: expected ';' at end of member declaration
   int size  = sizeof... (Entries);// line A
               ^
main.cpp:11:21: error: expected unqualified-id before '...' token
   int size  = sizeof... (Entries);// line A
                     ^
main.cpp:11:15: error: expected primary-expression at end of input
   int size  = sizeof... (Entries);// line A
               ^
